--- a/EscapeFromAtlantis/src/UI/Menu.form
+++ b/EscapeFromAtlantis/src/UI/Menu.form
@@ -134,6 +134,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="Mejores puntajes"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton6ActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton1">
           <Properties>
