--- a/EscapeFromAtlantis/src/UI/GraphicsUI.form
+++ b/EscapeFromAtlantis/src/UI/GraphicsUI.form
@@ -3475,7 +3475,7 @@
               <Group type="102" attributes="0">
                   <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
                   <Component id="jButton4" min="-2" pref="96" max="-2" attributes="0"/>
-                  <EmptySpace pref="28" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
