--- a/EscapeFromAtlantis/src/UI/GraphicsUI.form
+++ b/EscapeFromAtlantis/src/UI/GraphicsUI.form
@@ -1882,6 +1882,9 @@
               <Image iconType="3" name="/Imagenes/Water tile.png"/>
             </Property>
           </Properties>
+          <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="jLabel54MouseClicked"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="719" y="72" width="50" height="-1"/>
